# bass-betterer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
Source/: FuzzChain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ir/: ir-pack.tar.gz.enc
packaging/: DISCLAIMER.txt
packaging/macos/: build-dmg.sh  entitlements.plist
packaging/windows/: installer.iss
scripts/: ir-crypt.sh
tools/: bor_bench.cpp
